deploy/k8s/devhub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devhub
  namespace: smartresponsor
spec:
  selector:
    app: devhub
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
  type: ClusterIP
