deploy/k8s/marketplace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketplace
  namespace: smartresponsor
spec:
  selector:
    app: marketplace
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
  type: ClusterIP
